--- a/style.css
+++ b/style.css
@@ -140,6 +140,7 @@
     background-color: rgba(0, 0, 0, 0.4);
   }
   img {
+    position: absolute;
     width: 280px;
     height: 420px;
     border-radius: 1rem;
