--- a/style.css
+++ b/style.css
@@ -140,9 +140,13 @@
     background-color: rgba(0, 0, 0, 0.4);
   }
   img {
+    display: none;
     position: absolute;
     width: 280px;
     height: 420px;
     border-radius: 1rem;
+  }
+  .visible {
+    display: block;
   }
 
