--- a/style.css
+++ b/style.css
@@ -108,6 +108,7 @@
     border: 3px solid white;
     text-transform: capitalize;
     letter-spacing: 1px;
+    outline: 4px solid rgba(23, 1, 26, 0.767);
   }
   input[type=text]:focus {
     border: 3px solid rgb(140, 101, 231);
@@ -121,6 +122,9 @@
     right: 3rem;
     cursor: pointer;
     background-color: #d9b4f8;
+  }
+  button:hover {
+    background: red;
   }
   dialog {
     place-self: center;
@@ -150,6 +154,9 @@
     display: block;
   }
 @media (min-width:320px) and (max-width:550px) {
+  html {
+    place-content: start center;
+  }
   .tarot-card-display__container {
     width: 140px;
     height: 220px;
@@ -167,18 +174,20 @@
   }
   .tarot-card-display__flexbox {
     display: grid;
-    place-items: center;
+    /* place-items: center; */
     place-self: center;
-    width: 80%;
+    /* width: 80%; */
     grid-template-columns: 1fr 1fr;
     column-gap: 2rem;
     row-gap: 2rem;
   }
   .tarot-page__heading {
-    font-size: 1.5rem;
+    place-self: center;
+    font-size: 1.75rem;
     text-transform: uppercase;
     margin-bottom: 1.5rem;
-    letter-spacing: 4px;
+    margin-top: 3rem;
+    letter-spacing: 3px;
     color: white;
     text-shadow: 8px 8px 6px rgb(37, 2, 37);
   }
@@ -204,9 +213,10 @@
     cursor: pointer;
     background-color: #d9b4f8;
   }
-  #card-3{
+  #card3{
     position: absolute;
-    right: 50%;
+    right: 32%;
+    top: 63%;
   }
 }
 @media (min-width:375px) and (max-width:420px) {
@@ -214,13 +224,27 @@
     position: relative;
     place-self: center;
     font-size: 1rem;
-    left: 1.75rem;
-    padding: 1rem 1rem 1rem 1rem;
+    left: 2.25rem;
+    padding: 1rem 1rem 1rem 2rem;
     width: 340px;
     border-radius: 2rem;
     border: 3px solid white;
     text-transform: capitalize;
     letter-spacing: 0px;
+  }
+  button {
+    position: relative;
+    width: 60px;
+    border-radius: 1.5rem;
+    border: none;
+    right: 1.5rem;
+    cursor: pointer;
+    background-color: #d9b4f8;
+  }
+  #card3{
+    position: absolute;
+    right: 32%;
+    top: 63%;
   }
 }
 @media (min-width:460px) and (max-width:550px) {
@@ -230,10 +254,15 @@
     font-size: 1rem;
     left: 1.75rem;
     padding: 1rem 2rem 1rem 2rem;
-    width: 480px;
+    width: 380px;
     border-radius: 2rem;
     border: 3px solid white;
     text-transform: capitalize;
     letter-spacing: 0px;
+  }
+  #card3{
+    position: absolute;
+    right: 37%;
+    top: 63%;
   }
 }
