--- a/style.css
+++ b/style.css
@@ -124,7 +124,12 @@
     background-color: #d9b4f8;
   }
   button:hover {
-    background: red;
+    /* left: -100%; */
+    background: linear-gradient(to right, #d9b4f8, rgba(35, 119, 168, 0.616) );
+    transition: right 0.5s ease-in-out;
+  }
+  button:focus {
+    background-color:  rgba(35, 119, 168, 0.616) ;
   }
   dialog {
     place-self: center;
