--- a/style.css
+++ b/style.css
@@ -102,7 +102,8 @@
   input {
     position: relative;
     left: 2rem;
-    padding: 1rem 1rem 1rem 2rem;
+    padding: 1rem 1rem 1rem 1rem;
+    padding-right: 6rem;
     width: 660px;
     border-radius: 2rem;
     border: 3px solid white;
@@ -203,6 +204,7 @@
     font-size: 0.875rem;
     left: 1.75rem;
     padding: 1rem 1rem 1rem 2rem;
+    padding-right: 4rem;
     width: 300px;
     max-width: 360px;
     border-radius: 2rem;
@@ -223,8 +225,9 @@
     position: relative;
     /* right: 12%; */
     /* top: 63%; */
-    left: 57%;
+    left: 60%;
   }
+
 }
 @media (min-width:375px) and (max-width:420px) {
   input {
@@ -233,6 +236,7 @@
     font-size: 1rem;
     left: 2.25rem;
     padding: 1rem 1rem 1rem 2rem;
+    padding-right: 4rem;
     width: 340px;
     border-radius: 2rem;
     border: 3px solid white;
@@ -250,7 +254,7 @@
   }
   #card3{
     position: relative;
-    left: 57%;
+    left: 60%;
   }
   .tarot-page__heading {
     place-self: center;
@@ -270,6 +274,7 @@
     font-size: 1rem;
     left: 1.75rem;
     padding: 1rem 2rem 1rem 2rem;
+    padding-right: 5rem;
     width: 380px;
     border-radius: 2rem;
     border: 3px solid white;
@@ -288,7 +293,7 @@
   }
   #card3{
     position: relative;
-    left: 57%;
+    left: 60%;
   }
 }
 @media (min-width:550px) and (max-width:620px) {
@@ -298,6 +303,7 @@
     font-size: 1rem;
     left: 2.5rem;
     padding: 1rem 2rem 1rem 2rem;
+    padding-right: 5rem;
     width: 540px;
     border-radius: 2rem;
     border: 3px solid white;
@@ -343,6 +349,7 @@
     font-size: 1rem;
     left: 2.5rem;
     padding: 1rem 2rem 1rem 2rem;
+    padding-right: 5rem;
     width: 600px;
     border-radius: 2rem;
     border: 3px solid white;
