--- a/style.css
+++ b/style.css
@@ -255,6 +255,72 @@
   .visible {
     display: block;
   }
+  @media (min-width: 260px) and (max-width: 320px) {
+    html {
+      place-content: start center;
+    }
+    .tarot-card-display__container {
+      width: 140px;
+      height: 220px;
+      border-radius: 0.2rem;
+      background: white;
+      border: none;
+      position: relative;
+    } 
+    img {
+      display: none;
+      position: absolute;
+      width: 140px;
+      height: 220px;
+      border-radius: 0.2rem;
+    }
+    .tarot-card-display__flexbox {
+      display: grid;
+      /* place-items: center; */
+      place-self: center;
+      gap: 2rem;
+      grid-template-columns: 1fr 1fr;
+    }
+    .tarot-page__heading {
+      place-self: center;
+      font-size: 1.6rem;
+      text-transform: uppercase;
+      margin-bottom: 1rem;
+      margin-top: 3rem;
+      letter-spacing: 3px;
+      color: white;
+      text-shadow: 8px 8px 6px rgb(37, 2, 37);
+    }
+    input {
+      position: relative;
+      place-self: center;
+      font-size: 0.875rem;
+      left: 1.75rem;
+      padding: 1rem 4rem 1rem 2rem;
+      width: 300px;
+      max-width: 360px;
+      border-radius: 2rem;
+      border: 3px solid white;
+      text-transform: capitalize;
+      letter-spacing: 0px;
+    }
+    button {
+      position: relative;
+      width: 60px;
+      border-radius: 1.5rem;
+      border: none;
+      right: 2rem;
+      cursor: pointer;
+      background-color: #d9b4f8;
+    }
+    #card3{
+      position: relative;
+      /* right: 12%; */
+      /* top: 63%; */
+      left: 60%;
+    }
+  
+  }
 @media (min-width:320px) and (max-width:550px) {
   html {
     place-content: start center;
