--- a/style.css
+++ b/style.css
@@ -276,7 +276,9 @@ img {
   color: red;
   font-weight: bold;
 }
-
+#typingEffect {
+  color: pink;
+}
 /* Skeleton animation */
 @keyframes loading {
   0% {
